packages/preview/rowmantic/0.5.0/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

## [0.5.0] - 2025-09-07

- **Change**: `separator: " "` (a space) now splits on spaces and whitespace in markup #14
- **Add**: `rowgrid` function which forwards to `rowtable` but with other defaults and creates a grid; rowtable now supports both grids and tables when the appropriate options are passed. #15
- **Change**: The representation of `expandcell()` changed (but the representation is internal anyway)


## [0.4.0] - 2025-08-07

- **Add**: New function `row()` which can transform or style elements in a row #12
- **Fix**: A markup block of just space `[ ]` now counts as a row #12


## [0.3.0] - 2025-06-12

### Added

- New manual with examples and generated function documentation #9, #10
- Embedded `table.cell`s now supported in equation rows #10

### Fixed

- `column-width` now also accepts a single fraction, i.e. `1fr`, as value #10

## [0.2.0] - 2025-06-09

### Added

- `rowtable` now splits equations as rows, using the default separator `&` (the alignment marker) as cell separator. New examples added for this. #6
- `rowtable` parameter `separator-eq` to control the separator used for equations #6
- `rowtable` now supports table cells with `rowspan` #7
- `rowtable` parameter `column-width` allows configuring column widths without restricting column count #7

## [0.1.1] - 2025-06-03

### Added

- `table` parameter for `rowtable`, to configure which table function to use;
  this allows using rowtable with other table wrappers like `zero.ztable`. #3
- `table.header` and `table.footer` can take a single `expandcell` as their
  content. #5


## [0.1.0] - 2025-05-30

Initial release

### Added

- `rowtable` function
- `row-split` function
- `expandcell` function
- Support for `table.footer` and `table.header` in rowtable.
  They are handled just like other rows, splitting on separator. #2


<!-- versions are final when published on typst universe -->
[0.4.0]: https://github.com/typst-community/rowmantic/releases/tag/v0.4.0
[0.3.0]: https://github.com/typst-community/rowmantic/releases/tag/v0.3.0
[0.2.0]: https://github.com/typst-community/rowmantic/releases/tag/v0.2.0
[0.1.1]: https://github.com/typst-community/rowmantic/releases/tag/v0.1.1
[0.1.0]: https://github.com/typst-community/rowmantic/releases/tag/v0.1.0
